--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 								I am interested in applying a quantitative, mathematical, and data-driven lens to better understand issues of economic, political, and social importance. </p>
 
 								<p> 
-									I am currently working as a research assistant with <a href="https://www.matthewgentzkow.com"> Matt Gentzkow </a> on projects surrounding digital and social media, political advertising, and polarization. Previously, I worked at <a href = "https://www.quantco.com"> QuantCo</a>, a data science startup at the intersection of causal inference and machine learning, on a leave of absense during the 2020-2021 academic year.
+									I am currently working as a research assistant with <a href="https://www.matthewgentzkow.com"> Matthew Gentzkow </a> on projects surrounding digital and social media, political advertising, and polarization. Previously, I worked at <a href = "https://www.quantco.com"> QuantCo</a>, a data science startup at the intersection of causal inference and machine learning, on a leave of absense during the 2020-2021 academic year.
 
 									For the summer of 2020, I also worked as a summer analyst on the New York Federal Reserve's <a href="https://www.newyorkfed.org/research/economists/department">Financial Intermediation Research </a> team and as a research assistant for <a href="https://mgduggan.people.stanford.edu"> Mark Duggan </a> and <a href="https://web.stanford.edu/~gopi/"> Gopi Goda</a> at the National Bureau of Economic Research (and previously at the Stanford Institute for Economic Policy Research). 
 
