Update cv and add deactivation

--- a/projects.html
+++ b/projects.html
@@ -77,11 +77,15 @@
 
 
                 <!-- Research -->
-                <h2>Economics Research</h2>
-
+                <h2>Economics</h2>
+                  
+                  <div class="panel panel-default">
+                    <div class="panel-heading accordion research-accordion"><h5>The Effects of Facebook and Instagram on the 2020 Election: A Deactivation Experiment<a target="_blank"> [paper]</a> </h5> <i> with Hunt Allcott, Matthew Gentzkow (co-lead authors), et al. 2022, in progress.
+                    </div>
+                  </div>
                 
                   <div class="panel panel-default">
-                    <div class="panel-heading accordion research-accordion"><h5>Analyzing Candidate's Ideological Messaging Throughout the Electoral System <a href="assets/docs/bw_id_draft.pdf" target="_blank">[paper]</a><a href="assets/docs/bw_id_slides.pdf" target="_blank">[slides]</a></h5> <i> Received the 2022 Anna Laura Myers Prize for Oustanding Honors Thesis in Economics </i> <br> under the direction of Matthew Gentzkow, 2022.
+                    <div class="panel-heading accordion research-accordion"><h5>Analyzing Candidate's Ideological Messaging Throughout the Electoral System <a href="assets/docs/bw_id_draft.pdf" target="_blank">[paper]</a><a href="assets/docs/bw_id_slides.pdf" target="_blank">[slides]</a></h5> <i> Received the 2022 Anna Laura Myers Prize for Oustanding Honors Thesis in Economics </i> <br> under the direction of Matthew Gentzkow, 2022, in progress.
                     </div>
                     <div class="panel-body panel-project">
                       <div class='panel-text'>
@@ -91,7 +95,7 @@
                   </div>
 
                   <div class="panel panel-default">
-                    <div class="panel-heading accordion research-accordion"><h5>The Minimum Wage and Social Security Disability Insurance <a target="_blank">[paper]</a></h5> with Mark Duggan and Gopi Goda, 2021.
+                    <div class="panel-heading accordion research-accordion"><h5>The Minimum Wage and Social Security Disability Insurance <a target="_blank">[paper]</a></h5> with Mark Duggan and Gopi Goda, in progress.
                     </div>
                     <div class="panel-body panel-project">
                       <div class='panel-text'>
