update visually evoked potentials

--- a/projects.html
+++ b/projects.html
@@ -80,12 +80,13 @@
                 <h2>Economics</h2>
                   
                   <div class="panel panel-default">
-                    <div class="panel-heading accordion research-accordion"><h5>The Effects of Facebook and Instagram on the 2020 Election: A Deactivation Experiment<a target="_blank"> [paper]</a> </h5> <i> with Hunt Allcott, Matthew Gentzkow (co-lead authors), et al. 2022, in progress.
+                    <div class="panel-heading accordion research-accordion"><h5>The Effects of Facebook and Instagram on the 2020 Election: A Deactivation Experiment<a target="_blank"> [paper]</a> </h5> with Hunt Allcott, Matthew Gentzkow (two co-lead authors), et al. 2022,
+                    <i>in progress.</i>
                     </div>
                   </div>
                 
                   <div class="panel panel-default">
-                    <div class="panel-heading accordion research-accordion"><h5>Analyzing Candidate's Ideological Messaging Throughout the Electoral System <a href="assets/docs/bw_id_draft.pdf" target="_blank">[paper]</a><a href="assets/docs/bw_id_slides.pdf" target="_blank">[slides]</a></h5> <i> Received the 2022 Anna Laura Myers Prize for Oustanding Honors Thesis in Economics </i> <br> under the direction of Matthew Gentzkow, 2022, in progress.
+                    <div class="panel-heading accordion research-accordion"><h5>Analyzing Candidate's Ideological Messaging Throughout the Electoral System <a href="assets/docs/bw_id_draft.pdf" target="_blank">[paper]</a><a href="assets/docs/bw_id_slides.pdf" target="_blank">[slides]</a></h5> <i> Received the 2022 Anna Laura Myers Prize for Oustanding Honors Thesis in Economics </i> <br> under the direction of Matthew Gentzkow, 2022, <i>in progress</i>.
                     </div>
                     <div class="panel-body panel-project">
                       <div class='panel-text'>
@@ -95,7 +96,7 @@
                   </div>
 
                   <div class="panel panel-default">
-                    <div class="panel-heading accordion research-accordion"><h5>The Minimum Wage and Social Security Disability Insurance <a target="_blank">[paper]</a></h5> with Mark Duggan and Gopi Goda, in progress.
+                    <div class="panel-heading accordion research-accordion"><h5>The Minimum Wage and Social Security Disability Insurance <a target="_blank">[paper]</a></h5> with Mark Duggan and Gopi Goda, <i>in progress.</i>
                     </div>
                     <div class="panel-body panel-project">
                       <div class='panel-text'>
@@ -106,11 +107,11 @@
 
 
                   <div class="panel panel-default">
-                    <div class="panel-heading accordion research-accordion"><h5>Visually Evoked Brain Potentials Differences During Consumer Choice Reflect Ultimate Market Outcomes <a target="_blank">[paper]</a> </h5> with John Veillette, Shannon Head, Katherine Reis, and Howard Nusbaum, 2020.  </i>
+                    <div class="panel-heading accordion research-accordion"><h5>Single-Trial Visually Evoked Potentials Predict Both Individual Choice and Market Outcomes <a target="_blank">[paper]</a> </h5> with John Veillette, Shannon Head, Katherine Reis, and Howard Nusbaum, forthcoming in <i>Scientific Reports</i>, 2023.  
                     </div>
                     <div class="panel-body panel-project">
                       <div class='panel-text'>
-                        Neuroeconomics research on value-based decision-making has generally relied upon assumptions regarding aspects of dopamine-connected brain regions as defining a “reward system” underlying utility. Recent studies of sensorimotor decision-making, however, suggest that reward processing extends well beyond the typically assumed anatomical and functional boundaries of this reward system. Instead, reward-dependent processing appears present throughout sensory systems, and representations of utility that are dissociable from other mechanisms such as attention have been identified in early sensory areas. This suggests that decision-making can act directly on sensory inputs rather than exclusively on associations that activate the reward system, but most neuroeconomic models do not account for this. It is unclear whether these findings apply directly to value-based decision-making, but recent findings show that consumer choice behavior can be predicted from visual evoked responses in the P2-N2 time window, which is thought to precede the categorization of visual stimuli and has been previously related to affective responses. We assess whether this early neural response, demonstrated previously to index consumer choice and is related to affective responses, is a precursor to similar affective valuation responses that neuroeconomic models commonly attribute to the dopamine-rich regions. We tested whether, like the affective nucleus accumbens response during value-based decision-making, evoked response differences reflect not just individual choice behavior but also generalize more readily across people than do individual choice responses, which has previously allowed researchers to forecast consumer market outcomes from the brain responses of individuals.
+                        A central assumption in the behavioral sciences is that choice behavior generalizes enough across individuals that measurements from a sampled group can predict the behavior of the population. Following from this assumption, the unit of behavioral sampling or measurement for most neuroimaging studies is the individual; however, cognitive neuroscience is increasingly acknowledging a dissociation between neural activity that predicts individual behavior and that which predicts the average or aggregate behavior of the population suggesting a greater importance of individual differences than is typically acknowledged. For instance, past work has demonstrated that some, but not all, of the neural activity observed during value-based decision-making is able to predict not just individual subjects’ choices but also the success of products on large, online marketplaces – even when those two behavioral outcomes deviate from one another – suggesting that some neural component processes of decision-making generalize to aggregate market responses more readily across individuals than others do. While the bulk of such research has highlighted affect-related neural responses (i.e. in the nucleus accumbens) as a better predictor of group-level behavior than frontal cortical activity associated with the integration of more idiosyncratic choice components, more recent evidence has implicated responses in visual cortical regions as strong predictors of group preference. Taken together, these findings suggest a role of neural responses during early perception in reinforcing choice consistency across individuals and raise fundamental scientific questions about the role sensory systems in value-based decision-making processes. We use a multivariate pattern analysis approach to show that single-trial visually evoked electroencephalographic (EEG) activity can predict individual choice throughout the post-stimulus epoch; however, a nominally sparser set of activity predicts the aggregate behavior of the population. These findings support an account in which a subset of the neural activity underlying individual choice processes can scale to predict behavioral consistency across people, even when the choice behavior of the sample does not match the aggregate behavior of the population. 
                       </div>
                     </div>
                   </div>
