--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 								</button>
 								<h4 class="title">Benjamin Wittenbrink</h4>
 								<p> Welcome! </p>
-								<p> I recently graduated with a Masters in Computer Science with a concentration in Artificial Intelligence at Stanford University (Class of '23). In 2022, I graduated with honors from Stanford with a B.A. in Economics and a B.S. in Mathematics, receiving the Anna Laura Myers Prize for Oustanding Honors Thesis in Economics. 
+								<p> I recently graduated with a Masters in Computer Science with a concentration in Artificial Intelligence at Stanford University (Class of '23). In 2022, I graduated with honors from Stanford with a B.A. in Economics and a B.S. in Mathematics, receiving the Anna Laura Myers Prize for Outstanding Honors Thesis in Economics. 
 
 								I am interested in applying a quantitative, mathematical, and data-driven lens to better understand issues of economic, political, and social importance. </p>
 
