update projects + index

--- a/index.html
+++ b/index.html
@@ -74,12 +74,16 @@
 								</button>
 								<h4 class="title">Benjamin Wittenbrink</h4>
 								<p> Welcome! </p>
-								<p> I recently graduated with a Masters in Computer Science with a concentration in Artificial Intelligence at Stanford University (Class of '23). In 2022, I graduated with honors from Stanford with a B.A. in Economics and a B.S. in Mathematics, receiving the Anna Laura Myers Prize for Outstanding Honors Thesis in Economics. 
-
-								I am interested in applying a quantitative, mathematical, and data-driven lens to better understand issues of economic, political, and social importance. </p>
+								<p> 
+									I recently graduated with a Masters in Computer Science (concentration in Artificial Intelligence and Machine Learning) from Stanford University (Class of '23). 
+									In 2022, I graduated with Honors from Stanford with a B.A.H. in Economics and a B.S. in Mathematics, receiving the Anna Laura Myers Prize for Outstanding Honors Thesis in Economics. 
+									I am broadly interested in applying a quantitative, mathematical, and data-driven lens to better understand issues of economic, political, and social importance. </p>
 
 								<p> 
-									I am currently working as a data scientist and quantitative researcher at <a href = "https://www.quantco.com"> QuantCo</a>, a data science startup at the intersection of causal inference and machine learning, in San Francisco. During my masters, I worked as a research assistant with <a href="https://www.matthewgentzkow.com"> Matthew Gentzkow </a> on projects surrounding digital and social media, political advertising, and polarization. I continue to work on one such project as a lead author. 
+									I am currently working as a quantitative researcher and data scientist at <a href = "https://www.quantco.com"> QuantCo</a>, 
+									a data science startup at the intersection of causal inference and machine learning, in San Francisco. 
+									During my masters, I worked as a research assistant with <a href="https://www.matthewgentzkow.com"> Matthew Gentzkow </a> on projects surrounding digital and social media, political advertising, and polarization. 
+									I continue to work on one such project as a lead author. 
 								</p>
 
 								<p>
