rename projects header (minor)

--- a/projects.html
+++ b/projects.html
@@ -162,7 +162,7 @@
                 <br>
 
                 <!-- Course Projects -->
-                <h1>Selected Course Projects</h1>
+                <h1>Selected Projects</h1>
                 <hr>
 
                   <h2>Economics </h2>
