update cv + bio

--- a/index.html
+++ b/index.html
@@ -74,14 +74,27 @@
 								</button>
 								<h4 class="title">Benjamin Wittenbrink</h4>
 								<p> Welcome! </p>
+
 								<p> 
 									I recently graduated with a Masters in Computer Science (concentration in Artificial Intelligence and Machine Learning) from Stanford University (Class of '23). 
-									In 2022, I graduated with Honors from Stanford with a B.A.H. in Economics and a B.S. in Mathematics, receiving the Anna Laura Myers Prize for Outstanding Honors Thesis in Economics. 
-									I am broadly interested in applying a quantitative, mathematical, and data-driven lens to better understand issues of economic, political, and social importance. </p>
+									In 2022, I graduated with Honors from Stanford with a B.A. in Economics and a B.S. in Mathematics, receiving the Anna Laura Myers Prize for Outstanding Honors Thesis in Economics. 
+								</p>	
+									
+								<p>
+									I aim to be an applied microeconomist with a focus on public economics, political economy, and industrial organization. 
+									I am especially interested in understanding how governmental poliices influence individual choices and welfare, firm-level outcomes, market structures, and societal dynamics, 
+									and in integrating machine learning models with traditional econometric methods to do so. 
+									I am currently applying to PhD programs in economics. 
+								</p>
+									<!-- I am broadly interested in applying a quantitative, mathematical, and data-driven lens to better understand issues of economic, political, and social importance. -->
+								
 
 								<p> 
 									I am currently working as a quantitative researcher and data scientist at <a href = "https://www.quantco.com"> QuantCo</a>, 
 									a data science startup at the intersection of causal inference and machine learning, in San Francisco. 
+								</p>
+
+								<p>
 									During my masters, I worked as a research assistant with <a href="https://www.matthewgentzkow.com"> Matthew Gentzkow </a> on projects surrounding digital and social media, political advertising, and polarization. 
 									I continue to work on one such project as a lead author. 
 								</p>
