#31: add deact PNAS link

--- a/index.html
+++ b/index.html
@@ -77,14 +77,13 @@
 
 								<p> 
 									I recently graduated with a MS in Computer Science (concentration in Artificial Intelligence and Machine Learning) from Stanford. In 2022, I graduated with 
-									a BA in Economcis with Honors and a BS in Mathematics from Stanford. My undergraduate thesis received the Anna Laura Myers Prize for Outstanding Honors Thesis.
+									a BA in Economics with Honors and a BS in Mathematics from Stanford. My undergraduate thesis received the Anna Laura Myers Prize for Outstanding Honors Thesis.
 								</p>	
 									
 								<p>
 									I aim to be an applied microeconomist with a focus on public economics, political economy, and industrial organization. 
 									I am especially interested in understanding how governmental policies influence individual choices and welfare, firm-level outcomes, market structures, and societal dynamics, 
 									and in integrating machine learning models with traditional econometric methods to do so. 
-									I am currently applying to PhD programs in economics. 
 								</p>
 
 								<p> 
@@ -129,9 +128,5 @@
 	<script src="assets/js/jquery/jquery.min.js"></script>
 	<!-- Custom JavaScript (from Cody)-->
 	<script src="assets/js/custom.js"></script>
-
-	<div class = "page-footer text-right py-3" style="font-size: 12px; margin-right: 10px">
-		Style inspiration from Cody Cook. 
-	</div>
 </body>
 </html>
