--- a/projects.html
+++ b/projects.html
@@ -114,10 +114,21 @@
                   <div class="panel-heading accordion research-accordion">
                     <h5>
                       The Effects of Facebook and Instagram on the 2020 Election: A Deactivation Experiment
-                      <a target="_blank"> [paper]</a> 
+                      <a href="https://www.pnas.org/doi/epdf/10.1073/pnas.2321584121" target="_blank"> [paper]</a> 
                     </h5> 
-                    as non-lead co-author with Hunt Allcott, Matthew Gentzkow (lead authors), et al., 2023,
-                  <i>under review.</i>
+                    as non-lead co-author with Hunt Allcott and Matthew Gentzkow (lead authors), et al.,
+                    <a href="https://www.pnas.org/doi/10.1073/pnas.2321584121" target="_blank"><i>PNAS</i></a>, 
+                    2024. 
+                  </div>
+                  <div class="panel-body panel-project"> 
+                    <div class="panel-text">
+                      We study the effect of Facebook and Instagram access on political beliefs, attitudes, and behavior by randomizing a subset of 19,857 Facebook users and 15,585 Instagram users to deactivate their accounts for 6 weeks before the 2020 U.S. election. 
+                      We report four key findings. 
+                      First, both Facebook and Instagram deactivation reduced an index of political participation (driven mainly by reduced participation online). 
+                      Second, Facebook deactivation had no significant effect on an index of knowledge, but secondary analyses suggest that it reduced knowledge of general news while possibly also decreasing belief in misinformation circulating online. 
+                      Third, Facebook deactivation may have reduced self-reported net votes for Trump, though this effect does not meet our preregistered significance threshold. 
+                      Finally, the effects of both Facebook and Instagram deactivation on affective and issue polarization, perceived legitimacy of the election, candidate favorability, and voter turnout were all precisely estimated and close to zero.
+                    </div>
                   </div>
                 </div>
 
