add MIT, change photo

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 								</button>
 								<h4 class="title">Benjamin Wittenbrink</h4>
 								<p> Welcome! </p>
-
+								
 								<p> 
-									I recently graduated with a MS in Computer Science (concentration in Artificial Intelligence and Machine Learning) from Stanford. In 2022, I graduated with 
+									I am an incoming Economics PhD student at MIT, starting in September 2024. I recently graduated with a MS in Computer Science (concentration in Artificial Intelligence and Machine Learning) from Stanford. In 2022, I graduated with 
 									a BA in Economics with Honors and a BS in Mathematics from Stanford. My undergraduate thesis received the Anna Laura Myers Prize for Outstanding Honors Thesis.
 								</p>	
 									
@@ -87,7 +87,7 @@
 								</p>
 
 								<p> 
-									I am currently working as a quantitative researcher and data scientist at <a href = "https://www.quantco.com"> QuantCo</a>, 
+									Most recently, I worked as a quantitative researcher and data scientist at <a href = "https://www.quantco.com"> QuantCo</a>, 
 									a data science startup at the intersection of causal inference and machine learning, in San Francisco. 
 									During my masters, I worked as a research assistant with <a href="https://www.matthewgentzkow.com"> Matthew Gentzkow </a> on projects surrounding digital and social media, political advertising, and polarization. 
 									I continue to work on one such project as a lead author. 
