--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<!-- Sidebar --> 
 		<div id="sidebar-wrapper" class="col-lg-4 col-md-4 col-sm-6">
 			<div id='logo' class="text-center">
-				<img src="assets/images/stanford.png" class="img-thumbnail w-50">
+				<img src="assets/images/mit.png" class="img-thumbnail w-50">
 			</div>
 			<ul class="sidebar-menu list-unstyled top-sidebar-menu">
 				<li class="sidebar-list-item"><a href="index.html" class="sidebar-link text-muted active text-uppercase"><i class="o-home-1 mr-3 text-gray"></i><span>Home</span></a></li>
