bhw: update affiliation

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			</ul>
 			<hr>
 			<ul class = "sidebar-menu list-unstyled">
-				<li class = "sidebar-list-item"><i class="mr-3"></i><a href="mailto:witten@stanford.edu" class ="btn btn-outline-primary btn-sidebar bg-transparent border-0" target="_blank" role = "button"> Email</a></li>
+				<li class = "sidebar-list-item"><i class="mr-3"></i><a href="mailto:bwitten@mit.edu" class ="btn btn-outline-primary btn-sidebar bg-transparent border-0" target="_blank" role = "button"> Email</a></li>
 				<li class = "sidebar-list-item"><i class="mr-3"></i><a href="http://linkedin.com/in/bwittenbrink/" class ="btn btn-outline-primary btn-sidebar bg-transparent border-0" target="_blank" role = "button">LinkedIn</a></li>
 				<li class = "sidebar-list-item"><i class="mr-3"></i><a href="assets/docs/bw_cv.pdf" class ="btn btn-outline-primary btn-sidebar bg-transparent border-0" target="_blank" role = "button">CV</a></li> 
 			</ul>
@@ -76,12 +76,12 @@
 								<p> Welcome! </p>
 								
 								<p> 
-									I am an incoming Economics PhD student at MIT, starting in September 2024. I recently graduated with a MS in Computer Science (concentration in Artificial Intelligence and Machine Learning) from Stanford. In 2022, I graduated with 
+									I am a first year Economics PhD student at MIT. I recently graduated with a MS in Computer Science (concentration in Artificial Intelligence and Machine Learning) from Stanford. In 2022, I graduated with 
 									a BA in Economics with Honors and a BS in Mathematics from Stanford. My undergraduate thesis received the Anna Laura Myers Prize for Outstanding Honors Thesis.
 								</p>	
 									
 								<p>
-									I aim to be an applied microeconomist with a focus on public economics, political economy, and industrial organization. 
+									I aim to be an applied microeconomist with a focus on industrial organization, public economics, and political economy. 
 									I am especially interested in understanding how governmental policies influence individual choices and welfare, firm-level outcomes, market structures, and societal dynamics, 
 									and in integrating machine learning models with traditional econometric methods to do so. 
 								</p>
