add emotional state NBER

--- a/projects.html
+++ b/projects.html
@@ -77,9 +77,30 @@
 
 
                 <!-- Research -->
-                <h1>Research Papers</h1>
-                <hr>
-                  
+                <!-- <h1>Research Papers</h1>
+                <hr> -->
+
+                <!-- EMOTIONAL STATE -->
+                <div class="panel panel-default">
+                  <div class="panel-heading accordion research-accordion">
+                    <h5>
+                      The Effect of Deactivating Facebook and Instagram on Users’ Emotional State 
+                      <a href="assets/docs/research/bw_emotional_state.pdf" target="_blank">[paper]</a>
+                    </h5> 
+                    as lead co-author with Hunt Allcott and Matthew Gentzkow, et al., <i></i>
+                    <a href="https://www.nber.org/papers/w33697" target="_blank"><i>NBER Working Paper #33697</i></a>,
+                    2025.
+                  </div>
+                  <div class="panel-body panel-project">
+                    <div class='panel-text'>
+                      We estimate the effect of social media deactivation on users’ emotional state in two large randomized experiments before the 2020 U.S. election. 
+                      People who deactivated Facebook for the six weeks before the election reported a 0.060 standard deviation improvement in an index of happiness, depression, and anxiety, relative to controls who deactivated for just the first of those six weeks. 
+                      People who deactivated Instagram for those six weeks reported a 0.041 standard deviation improvement relative to controls. 
+                      Exploratory analysis suggests the Facebook effect is driven by people over 35, while the Instagram effect is driven by women under 25.
+                    </div>
+                  </div>
+                </div>
+                
                 <!-- THESIS -->
                 <div class="panel panel-default">
                   <div class="panel-heading accordion research-accordion">
@@ -138,7 +159,7 @@
                     <h5>
                       The Minimum Wage and Social Security Disability Insurance 
                       <a href="assets/docs/research/bw_mw_draft.pdf" target="_blank">[paper]</a>
-                    </h5> with Mark Duggan and Gopi Goda, <i>Working Paper.</i>
+                    </h5> with Mark Duggan and Gopi Goda, <i>Working Paper,</i> 2021.
                   </div>
                   <div class="panel-body panel-project">
                     <div class='panel-text'>
