--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-171593765-1"></script>
+	<!-- Google tag (gtag.js) for GA4 -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-5GQ1RN5ZLX"></script>
 	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
 
-		gtag('config', 'UA-171593765-1');
+		gtag('config', 'G-5GQ1RN5ZLX');
 	</script>
 
 
