add AEJ-EP status

--- a/projects.html
+++ b/projects.html
@@ -87,7 +87,9 @@
                       The Effect of Deactivating Facebook and Instagram on Users’ Emotional State 
                       <a href="assets/docs/research/bw_emotional_state.pdf" target="_blank">[paper]</a>
                     </h5> 
-                    as lead co-author with Hunt Allcott and Matthew Gentzkow, et al., <i></i>
+                    as lead co-author with Hunt Allcott and Matthew Gentzkow, et al.,
+                    <br>
+                    conditionally accepted at <i>American Economic Journal: Economic Policy;</i>
                     <a href="https://www.nber.org/papers/w33697" target="_blank"><i>NBER Working Paper #33697</i></a>,
                     2025.
                   </div>
